Revision history for Perl extension App::Followme

{{$NEXT}}

0.77 2013-08-17T15:19:16Z
    - fixed time zone depndent test
    - added new blocks to templates

0.76 2013-08-16T22:23:24Z
    - feature complete release